--- a/localisation/focus_l_english.yml
+++ b/localisation/focus_l_english.yml
@@ -2293,7 +2293,31 @@
  FSM_pass_native_rights_bill:1 "Pass Landowners' Suffarage Amendment"
  FSM_pass_native_rights_bill_desc:1 "The constituiton of the FSM dictates that only landowners are allowed suffarage, confining the range of voters to the upper class. An amendment to relax these laws and allow more people to vote has a been up in the air in the government for a long time. Passing this would give common citizens more rights and would let newer ideas help develop the nation."
  FSM_supress_manu_nationalism:1 "Oust Opposition in Manu"
- FSM_supress_manu_nationalism_desc:1 "Many of the representives in the Manu Autonomous State have proven uncooperative. We should use our powers to remove these figures from the government, and replace them with less radical represantives."
+ FSM_supress_manu_nationalism_desc:1 "The 1920 treaty of Brunpfadstad, that ended the brief British protectorate in Southern Mu, agreed that Saxonia Austral be reorganized as the Manu Autonomous State and put under FSM administration. Manu was slated to be admitted as a full state of the FSM by 1935; unfortunately, many fascist sympathizers in their government have resisted progress in integration of the state. The only way we can move forward is by weeding out these obstructionists."
+ FSM_rebuild_the_dockyards:1 "Rebuild the Dockyards"
+ FSM_rebuild_the_dockyards_desc:1 "The heaviest toll in the Great War was taken by our southern ports. Housing a majority of our civilian and military dockyards, Blauswasser was a hub of trade and naval power for the growing FSM. Ruthless coastal bombardment and the occupation of the city by Entente forces left this industry in ruins. If we hope to revitalize the nation, it is best to start here."
+ FSM_ripples_of_shanghai:1 "Ripples of Shanghai"
+ FSM_ripples_of_shanghai_desc:1 "7 years ago, sparked by the sinking of its crown vessel in the ports of Shanghai, the economic bubble of the German South Mu Company popped, with catastrophic consequences. Once a major holder of all trade in and out of Mu, the company is now a husk of its former shelf, and the economic influence it gave us is slipping out of our hands."
+ FSM_kohn_gambit:1 "Kohn Gambit"
+ FSM_kohn_gambit_desc:1 "Thomas Kohn is a steadfast owner of the Kohn Produktionsfirma, the biggest individual exporter of goods in the nation. His investments in the GSMC helped sustain it, and even today he remains a staunch supporter of it. Perhaps, handing the company’s control over to a single more experienced entrepreneur like him will help revitalize it, and tie its exports directly with it."
+ FSM_germans_over_all:1 "Germans Over All"
+ FSM_germans_over_all_desc:1 "The Germanic race has no other it compares to. Surviving hardships far and wide, and fighting our way into glorious independence on this foreign and wild continent, we have proven ourselves superior. The lesser must understand to never challenge us."
+ FSM_open_stocks:1 "Open Stocks"
+ FSM_open_stocks_desc:1 "The GSMC's recession has can be largely attributed to our failures to keep up with the times. We can help revitalize the company by better spreading out leadership, and encouraging more investment in its stocks. Although the company would become heavily decentralized, it would promote investment, as well as gain us more stability should some investors choose to retract like they have before."
+ FSM_annex_manu:1 "Integrate Manu"
+ FSM_annex_manu_desc:1 "The integration of the Manu Autonomous State has been delayed far too long. Reluctant far-right administration as well as disagreement over the future of the nation have been a thorn in the FSM's side, hurting our politics and economy for the past decade. It's time to put down our foot and stomp out these fascist once and for all."
+ FSM_kaiser_is_back:1 "The Kaiser is Back"
+ FSM_kaiser_is_back_desc:1 "With the illegitimate regime gone, the Kaiser has taken his rightful place on the throne of Germany! Now that the fatherland is no longer under the iron hand of the fascists, perhaps our ties can grow stronger again."
+ FSM_status_quo:1 "Status Quo"
+ FSM_status_quo_desc:1 "Change attracts instability. Why crumble under the wave of modern discourse, when we already have all we need?"
+ FSM_revoke_sanctions:1 "Revoke Sanctions"
+ FSM_revoke_sanctions_desc:1 "The Versailles Treaty imposed a number of unfair sanctions on us. While our workers toil away, the French and British reap our profit. No Freistaater should bear to live like this; the time has come to stand up for ourselves and deny the imperialist powers their oppressive demands."
+ FSM_reinstate_the_associate_state:1 "Restore the Associate State"
+ FSM_reinstate_the_associate_state_desc:1 "The Associate State represented a golden era for the german people. Our economy prospered under the Kaiserreich, and offered us mutual military support. But it is not too late to reinstate the Associate State, and once again reunite with our european brethren."
+ FSM_encourage_fascists:1 "Encourage Fascism"
+ FSM_encourage_fascists_desc:1 "Fascism seems to have brought Germany strength and unity; perhaps it will work for us too. Many officials in the government have sympathies to Hitler's regime; we should hear them out."
+ FSM_snap_elections:1 "Snap Elections"
+ FSM_snap_elections_desc:1 "The support for the ZNSP has reached a critical high. The people's demands have been made clear. We should organize a snap election to hear the populace out; lest we risk a revolt."
  TOD_start:1 "Organize the Government"
  TOD_start_desc:1 "Before we make any moves on the world stage we must ensure that we have prepared our government for the challenges ahead."
  TOD_cooperation:1 "Good Neighbors"
