--- a/localisation/aml_gathering_storm_l_english.yml
+++ b/localisation/aml_gathering_storm_l_english.yml
@@ -1,4 +1,42 @@
 ﻿l_english:
  MUU_GATHERING_STORM_DESC:1 "Choosing not to participate in the Great War, Mu's economy was unable to profit fully from war. Significant portions of the population still live in rural areas, not able to access the wonders of the modern world. \n\n Mu is in desperate need of revitalization. Recently a large scale dam project was started in southern Girgu state, but early indications show that the hoped for prosperity is unlikely to materialize. "
- MUU_bo:1 "."
+ TOD_GATHERING_STORM_DESC:1 "Despite Todorovia's voluntary participation in the Great War the nation is no better off than before. The rebellious colonies, who owe their supposed 'independence' to Todorovia, mock and reject Todorovia's rightful overlordship.\n\n Todorovia has the opportunity to decide the future; glory and honor, or safety. Will Todorovia gather her strength and bring back her lost sheep?"
+ tod_national_arms:1 "Todorovian National Arms"
+ diego_and_diego:1 "Armas D&D"
+ pablo_y_diazabal:1 "Pablo y Diazabal"
+ tanques_tanques:1 "Armadura Nacional"
+ TOD_national_yards:1 "Todorovian National Yards"
+ austral_shipyards:1 "Austral Shipyards"
+ t_m_e:1 "Navios T.M.E."
+ armas_navales:1 "Armas Navales"
+ tod_aguila:1 "Aviones Aguila"
+ ad_astra:1 "Ad Astra"
+ per_portam:1 "Armas Querubín"
+ santander:1 "Santander"
+ enaltecido:1 "Enaltecido"
+ mfg_generico:1 "Perez y Ortolí"
+ mfg_generico2:1 "Vellez y Dolo"
+ mfg_generico3:1 "Poje Manufacturing"
+ tod_national_oil:1 "Todorovian National Oil"
+ maquinas_de_todorovia:1 "Maquinas Todorovia"
+ industria_coral:1 "Industria Coral"
+ murumuq_nasajjin:1 "Murumuq Nasajjin"
+ yollohtli_tamu:1 "Yollohtli Tamu"
+ qashimshi_tamu:1 "Qashimshi Tamu"
+ qashimshitara_mu_tamu:1 "Qashimshitara Mu Tamu"
+ muror_national_yards:1 "Muror National Yards"
+ orqiq_otumatiq_ijrri:1 "Orqiq Otumatiq Ijrri"
+ droade_maude:1 "Droade Maude"
+ qaisur_naumenden:1 "Qaisur Naumenden"
+ tebred_saba_ijrri:1 "Tebred Saba Ijrri"
+ suubits_sabajiriq:1 "Suubits Sabajiriq"
+ qasbaijju_sabajiriq:1 "Qasbaijju Sabajiriq"
+ dzaisaindier:1 "Dzaisaindier"
+ progrusaz_sabajiriq:1 "Progrusaz Sabajiriq"
+ quudjer_tsirarr:1 "Quudjer Tsirarr"
+ heruq_tsirarr:1 "Heruq Tsirarr"
+ iqurdun_detsamilli:1 "Iqurdun Detsamilli"
+ muror_national_oil:1 "Muror National Oil"
+ eliqtriq_mejjine_tsirarr:1 "Eliqtriq Mejjine Tsirarr"
+ qusulli_arbeit_mejjine:1 "Qusulli Arbeit Mejjine Tsirarr"
  
