--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -851,7 +851,7 @@
  STATE_850:0 "Oaoa"
  STATE_851:0 "Hannahland"
  STATE_852:0 "Friendsville"
- STATE_853:0 "Nybornholm"
+ STATE_853:0 "Walien"
  STATE_854:0 "Scheonesland"
  STATE_855:0 "Sofiashaven"
  STATE_856:0 "Navganara"
@@ -935,3 +935,4 @@
  STATE_934:0 "Jaegerstaat"
  STATE_935:0 "Südwüstenland"
  STATE_936:0 "Nordwüstenland"
+ STATE_937:0 "Nybornholm"
