--- a/localisation/aml_focus_l_english.yml
+++ b/localisation/aml_focus_l_english.yml
@@ -272,4 +272,5 @@
  MUU_tac_focus_desc:1 "Lighter, faster, and more accurate than other bombers, these tactical bombers can help bring us an edge on the battlefield."
  MUU_bomber_focus:1 "Bomber Focus"
  MUU_bomber_focus_desc:1 "These heavier, more sturdy bombers can drop large payloads of high explosives on strategic targets, weakening the enemy's infrastructure and manufacturing capabilities."
+ MUU_ussr_economic_cooperation:1 "Mu-USSR Research Cooperative"
  
