fixed some state names

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -818,8 +818,8 @@
  STATE_817:0 "Matue"
  STATE_818:0 "Taluahavi"
  STATE_819:0 "Nuiava"
- STATE_820:0 "Nopi"
- STATE_821:0 "Rinka"
+ STATE_820:0 "South Snowdon"
+ STATE_821:0 "Edwardiana"
  STATE_822:0 "O'okiwe"
  STATE_823:0 "Okona"
  STATE_824:0 "Port Dewey"
@@ -878,7 +878,7 @@
  STATE_877:0 "Neji"
  STATE_878:0 "Virqq"
  STATE_879:0 "Asetale"
- STATE_880:0 "Mu City"
+ STATE_880:0 "Vatpagchi"
  STATE_881:0 "Atulsan"
  STATE_882:0 "Dustartajare"
  STATE_883:0 "Teqsitlti"
