--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -215,8 +215,8 @@
  SCH_democratic_ADJ:0 "Schoeneslander"
  SCH_neutrality_ADJ:0 "Schoeneslander"
  SCH_communism_ADJ:0 "Schoeneslander"
- FSM_fascism:0 "Kaiserstaaten von Mu"
- FSM_fascism_DEF:0 "The Kaiserstaaten von Mu"
+ FSM_fascism:0 "Freiestaaten von Deutschesmu"
+ FSM_fascism_DEF:0 "Freiestaaten von Deutschesmu"
  FSM_democratic:0 "Freiestaaten von Mu"
  FSM_democratic_DEF:0 "The Freiestaaten von Mu"
  FSM_neutrality:0 "Freiestaaten von Mu"
