fixed state names in descisions

--- a/localisation/AML_decisions_l_english.yml
+++ b/localisation/AML_decisions_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
- develop_xd_aluminium_plants:0 "Develop Aluminium Refineries in Vatpagchi Saeli"
+ develop_xd_aluminium_plants:0 "Develop Aluminium Refineries in Vatpagchi"
  develop_dustartajare_aluminium_deposits:0 "Develop Bauxite Deposits in Dustartajare"
  develop_atulsan_aluminium_deposits:0 "Develop Bauxite Deposits in Atulsan"
  develop_atulsan_tungsten_deposits:0 "Develop Tungsten Deposits in Atulsan"
@@ -38,9 +38,9 @@
  develop_rahi_plantations:0 "Develop Rubber Plantations in Rahi"
  further_develop_rahi_plantations:0 "Further Develop the Plantations of Rahi"
  
- develop_gelim_bauxite_deposits:0 "Develop Bauxite Deposits in Gelim"
- develop_koe_iron_deposits:0 "Develop Iron Deposits in Koe"
- develop_faefana_iron_deposits:0 "Develop Iron Deposits in Fa'efana"
+ develop_karlswald_bauxite_deposits:0 "Develop Bauxite Deposits in Karlswald"
+ develop_peterstrand_iron_deposits:0 "Develop Iron Deposits in Petersstrand"
+ develop_blaueswasserstaat_iron_deposits:0 "Develop Iron Deposits in Blaueswasserstaat"
  
  develop_pohe_iron_deposits:0 "Develop Iron Deposits in Pohe"
  develop_taere_tungsten_plants:0 "Develop Tungsten Deposits in Taere"
@@ -49,20 +49,20 @@
  develop_navganara_industrial_district:0 "Build a Mining Complex in Navganara"
  develop_navganara_refineries:0 "Expand Mining Infrastructure in Pohe"
  
- develop_tetaata_tungsten_plants:0 "Develop Tungsten Deposits in Teta'ata"
+ develop_williamskust_tungsten_plants:0 "Develop Tungsten Deposits in Williamskust"
  develop_oranjehaven_steel_refineries:0 "Develop Steel Refineries in Oranjehaven"
  
  develop_houavae_iron_deposits:0 "Develop Iron Deposits in Hou'avae"
  develop_kaniwha_rubber_farms:0 "Develop Rubber Farms in Kaniwha"
  
- develop_gaajhajaq_aluminium_plants:0 "Develop Aluminium Refineries in Gaajhajaq"
+ develop_minasdoimperador_aluminium_plants:0 "Develop Aluminium Refineries in Minas do Imperador"
  develop_lauwili_oil_plants:0 "Develop Oil Extraction Plants in Lauwili"
  develop_purumu_oil_plants:0 "Develop Oil Extraction Plants in Purumu"
  develop_inai_rubber_farms:0 "Develop Rubber Farms in Ina'i"
- develop_teshlin_tungsten_deposits:0 "Develop Tungsten Deposits in Teshlin"
+ develop_savoiette_tungsten_deposits:0 "Develop Tungsten Deposits in Savoiette"
  develop_salvacion_steel_refineries:0 "Develop Steel Refineries in Salvación"
  develop_mapotoufu_steel_refineries:0 "Develop Steel Refineries in Mápó Tòufu"
  develop_qitiankang_steel_refineries:0 "Develop Steel Refineries in Qītiān Káng"
- develop_vauhitu_chromium_deposits:0 "Develop Chromium Deposits in Va'uhiti"
+ develop_vogelinsel_chromium_deposits:0 "Develop Chromium Deposits in Vogelinsel"
  
  
