changed Awa's postion

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -936,7 +936,8 @@
  VICTORY_POINTS_13049:0 "Pitkairn"
  VICTORY_POINTS_8787:0 "Blaueswasser"
  VICTORY_POINTS_13837:0 "Vatpagchi Saeli"
-  VICTORY_POINTS_13905:0 "Awa"
+  VICTORY_POINTS_13905:0 "PLACEHOLDER NAME"
+  VICTORY_POINTS_13907:0 "Awa"
    VICTORY_POINTS_13515:0 "Oi'oi"
     VICTORY_POINTS_13412:0 "Whenuaomaui"
      VICTORY_POINTS_13284:0 "Savaiki"
