--- a/localisation/events_l_english.yml
+++ b/localisation/events_l_english.yml
@@ -3188,5 +3188,22 @@
  fsm.1.d:0 "The 1936 election in the FSM have concluded with a suprising victory at the hands of the Liberale Koalition. A progressive group, the LK party has only gained traction within recent years, but it seems to have been enough to garner them a slim majority of the votes. The party is already promising to undertake major reforms of the nation, in hopes of revitalizing the economy, mending the nation's poor diplomatic relations, and creating a more democratic and egalitarian state."
  fsm.1.a:0 "To a new course for the Freistaaten!!"
  fsm.2.t:0 "Selbstverwaltung Partei Wins Elections"
- fsm.2.d:0 "Despite the increased politcal resistance this term, the Selbstverwaltung Partei has emerged victorious once again. Dominating the nations politics since independence in 1919, the party upholds self-rule for the FSM, and favours an economy built on large, German-owned companies within the country. Although it has become a pillar of stability for the people, there are worries among the government that many members of the party have become unscrupulous in their rule, and foster authoritarian sympathies."
+ fsm.2.d:0 "Despite the increased political resistance this term, the Selbstverwaltung Partei has emerged victorious once again. Dominating the nations politics since independence in 1919, the party upholds self-rule for the FSM, and favours an economy built on large, German-owned companies within the country. Although it has become a pillar of stability for the people, there are worries among the government that many members of the party have become unscrupulous in their rule, and foster authoritarian sympathies."
  fsm.2.a:0 "To another properous term!"
+ fsm.3.t:0 "DMS-GdEA Merger Announced"
+ fsm.3.d:0 "A mere days after becoming an officially functional party, the Gewerkschaft der Einheimischen Arbeiter, under the leadership of Sumukivi Aepa’ato, has announced it would be forming a coalition with the germanocentric Deutschemu Sozialisten. Although a predictable move, this change still caused quite an upheaval in the upper echelons of FSM's parlamient. The combined popularity of the two parties represents a communist bloc finally big enough to challenge the Selbstervaltung and LK parties."
+ fsm.3.a:0 "Strength comes in numbers and cooperation."
+
+ fsm.4.t:0 "FSM Requests Immediate Execution of Integration"
+ fsm.4.d:0 "Since 1918, the FSM has recieved us under its sphere. The ruthless oppurtunists and backhand paperpushers they are, from that very day they seeked to draw us closer into their union. Plans were drafted, and a the date set for 1935. The NSSAP had played stall tactics, wrestling power out of the FSM temporary administration, and giving it back to the people. But it seems patience has run thin. After the recent purges in our government and replacement of key fascist politicians, they have issued a demand to push through the annexation immediately, and admit Manu as a full Staat of the FSM"  
+ fsm.4.a:0 "We can't resist anymore."
+ fsm.4.a:0 "Never shall Saxonia Austral stand under any flag but our own!"
+
+ fsm.5.t:0 "Manu Accepts Integration"
+ fsm.5.d:0 "It seems our recent ingerences have indeed cleared up the mess that was Manu's administration. A simple message came in today to the parlamient, a document of agreement to the integration, signed by the head of administration himself. We shall waste no time in honoring Manustaat as a righteous and full Staat under the Freistaaten union."
+ fsm.5.a:0 "A toast to the new compatriots!"
+ 
+ fsm.6.t:0 "FSM Seeks Alliance"
+ fsm.6.d:0 "News of return of the Kaiser we're met with widespread celebration in the souther Mu nation of the FSM. A German-born colony, they were quick to unite with the crown of a united Germany. They enjoyed a prosperous relationship with us under the Associate State, but were sadly put under British rule after the Great War. Today, with Germany free of its fascist regime, and the FSM under its own libery, they seek to ally with us once more."
+ fsm.6.a:0 "We welcome them with open hands."
+ fsm.6.a:0 "We don't need another burden on our back."
