--- a/localisation/events_l_english.yml
+++ b/localisation/events_l_english.yml
@@ -3195,9 +3195,9 @@
  fsm.3.a:0 "Strength comes in numbers and cooperation."
 
  fsm.4.t:0 "FSM Requests Immediate Execution of Integration"
- fsm.4.d:0 "Since 1918, the FSM has recieved us under its sphere. The ruthless oppurtunists and backhand paperpushers they are, from that very day they seeked to draw us closer into their union. Plans were drafted, and a the date set for 1935. The NSSAP had played stall tactics, wrestling power out of the FSM temporary administration, and giving it back to the people. But it seems patience has run thin. After the recent purges in our government and replacement of key fascist politicians, they have issued a demand to push through the annexation immediately, and admit Manu as a full Staat of the FSM"  
+ fsm.4.d:0 "Since 1918, the FSM has held us under its sphere. The ruthless opportunists and backhand paperpushers they are, from that very day they seeked to draw us closer into their union. Plans were drafted, and a date was set for 1935. The NSSAP had played stall tactics, wrestling power out of the FSM temporary administration, and giving it back to the people. But it seems patience has run thin. After the recent purges in our government and replacement of key fascist politicians, they have issued a demand to push through the annexation immediately, and admit Manu as a full Staat of the FSM"  
  fsm.4.a:0 "We can't resist anymore."
- fsm.4.a:0 "Never shall Saxonia Austral stand under any flag but our own!"
+ fsm.4.b:0 "Never shall Saxonia Austral stand under any flag but our own!"
 
  fsm.5.t:0 "Manu Accepts Integration"
  fsm.5.d:0 "It seems our recent ingerences have indeed cleared up the mess that was Manu's administration. A simple message came in today to the parlamient, a document of agreement to the integration, signed by the head of administration himself. We shall waste no time in honoring Manustaat as a righteous and full Staat under the Freistaaten union."
@@ -3206,4 +3206,4 @@
  fsm.6.t:0 "FSM Seeks Alliance"
  fsm.6.d:0 "News of return of the Kaiser we're met with widespread celebration in the souther Mu nation of the FSM. A German-born colony, they were quick to unite with the crown of a united Germany. They enjoyed a prosperous relationship with us under the Associate State, but were sadly put under British rule after the Great War. Today, with Germany free of its fascist regime, and the FSM under its own libery, they seek to ally with us once more."
  fsm.6.a:0 "We welcome them with open hands."
- fsm.6.a:0 "We don't need another burden on our back."
+ fsm.6.b:0 "We don't need another burden on our back."
