--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -859,8 +859,8 @@
  STATE_858:0 "Navjijeq"
  STATE_859:0 "Hatmaq"
  STATE_860:0 "Geq"
- STATE_861:0 "Dukun"
- STATE_862:0 "Unjarki"
+ STATE_861:0 "Duqun"
+ STATE_862:0 "Unjarqi"
  STATE_863:0 "Jijeq"
  STATE_864:0 "Mauruuru"
  STATE_865:0 "Blighsland"
