--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -131,30 +131,30 @@
  VSH_democratic_ADJ:0 "Vashparaqian"
  VSH_neutrality_ADJ:0 "Vashparaqian"
  VSH_communism_ADJ:0 "Vashparaqian"
- PRK_fascism:0 "Baragá"
- PRK_fascism_DEF:0 "Baragá"
- PRK_democratic:0 "Baragá"
- PRK_democratic_DEF:0 "Baragá"
- PRK_neutrality:0 "Baragá"
- PRK_neutrality_DEF:0 "Baragá"
- PRK_communism:0 "Socialist Republic of Baragá"
- PRK_communism_DEF:0 "The Socialist Republic of Baragá"
- PRK_fascism_ADJ:0 "Baragan"
- PRK_democratic_ADJ:0 "Baragan"
- PRK_neutrality_ADJ:0 "Baragan"
- PRK_communism_ADJ:0 "Baragan"
- MUI_fascism:0 "Côte des Manchots"
- MUI_fascism_DEF:0 "Côte des Manchots"
- MUI_democratic:0 "Côte des Manchots"
- MUI_democratic_DEF:0 "Côte des Manchots"
- MUI_neutrality:0 "Côte des Manchots"
- MUI_neutrality_DEF:0 "Côte des Manchots"
- MUI_communism:0 "Socialist Republic of Côte des Manchots"
- MUI_communism_DEF:0 "The Socialist Republic of Côte des Manchots"
- MUI_fascism_ADJ:0 "Manchotian"
- MUI_democratic_ADJ:0 "Manchotian"
- MUI_neutrality_ADJ:0 "Manchotian"
- MUI_communism_ADJ:0 "Manchotian"
+ BRG_fascism:0 "Baragá"
+ BRG_fascism_DEF:0 "Baragá"
+ BRG_democratic:0 "Baragá"
+ BRG_democratic_DEF:0 "Baragá"
+ BRG_neutrality:0 "Baragá"
+ BRG_neutrality_DEF:0 "Baragá"
+ BRG_communism:0 "Socialist Republic of Baragá"
+ BRG_communism_DEF:0 "The Socialist Republic of Baragá"
+ BRG_fascism_ADJ:0 "Baragan"
+ BRG_democratic_ADJ:0 "Baragan"
+ BRG_neutrality_ADJ:0 "Baragan"
+ BRG_communism_ADJ:0 "Baragan"
+ MCH_fascism:0 "Côte des Manchots"
+ MCH_fascism_DEF:0 "Côte des Manchots"
+ MCH_democratic:0 "Côte des Manchots"
+ MCH_democratic_DEF:0 "Côte des Manchots"
+ MCH_neutrality:0 "Côte des Manchots"
+ MCH_neutrality_DEF:0 "Côte des Manchots"
+ MCH_communism:0 "Socialist Republic of Côte des Manchots"
+ MCH_communism_DEF:0 "The Socialist Republic of Côte des Manchots"
+ MCH_fascism_ADJ:0 "Manchotian"
+ MCH_democratic_ADJ:0 "Manchotian"
+ MCH_neutrality_ADJ:0 "Manchotian"
+ MCH_communism_ADJ:0 "Manchotian"
  IKA_fascism:0 "Ikaika"
  IKA_fascism_DEF:0 "Ikaika"
  IKA_democratic:0 "Ikaika"
