--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -2505,6 +2505,10 @@
  polymer_corporation:0 "Polymer Corporation"
  inglis_company:0 "John Inglis and Company"
  small_arms_limited:0 "Small Arms Limited"
+ GEQ_scientific_backlog:0 "Scientific Backlog"
+ GEQ_scientific_backlog_desc:0 "We have an issue with a proper science base to help advance our technologies."
+ GEQ_murorian_supremacy:0 "Murorian Supremacy"
+ GEQ_murorian_supremacy_desc:0 "The Muror people of Geq consider themselves the 'masterrace' and are against immigration. This enflames a sense of duty to serve for nation."
 
 FSM_unfair_sufferage:0 "Unfair Suffrage"
 FSM_associate_state:0 "The Associate State"
