Updated focus tree for Geq
Added a decision some ideas, and started the monarchist path of geq.

--- a/localisation/events_l_english.yml
+++ b/localisation/events_l_english.yml
@@ -3183,6 +3183,16 @@
  zhenzuren.1.d:0 "Ever since the fall of the Qing dynasty, we have been fully independent from China. Our interests have remained focused our nation instead of the mainland. But as the beast that is Japan rears it's head, we find ourselves facing a common foe with our brethren. The KMT government has reach out to us, and proposes an alliance in order to protect both our nations from the Japanese threat."
  zhenzuren.1.a:0 "They need us, and we need them."
  zhenzuren.1.b:0 "Let them tear eachother apart."
+ geq.1.t:0 "The Empire of Mu demands our lands"
+ geq.1.d:0 "The Empire of Mu demands the states of Navjijeq, Navdrmu and, Navganara."
+ geq.1.a:0 "Vashparaq shall forever remain independent!"
+ geq.1.b:0 "We must help unify the Muror peoples."
+ geq.2.t:0 "Vashparaq denies our demands"
+ geq.2.d:0 "The 'state' of Vashparaq is oppressing the Muror peoples, and we must intervene and unite the people of Mu!"
+ geq.2.a:0 "To War!"
+ geq.3.t:0 "Vashparaq accepts our demands"
+ geq.3.d:0 "The states of Vashparaq has accepted our demands, and they have helped us unify our region and reconquer our continent!"
+ geq.3.a:0 "Great!"
 
  fsm.1.t:0 "Liberale Koalition Wins Elections"
  fsm.1.d:0 "The 1936 election in the FSM have concluded with a suprising victory at the hands of the Liberale Koalition. A progressive group, the LK party has only gained traction within recent years, but it seems to have been enough to garner them a slim majority of the votes. The party is already promising to undertake major reforms of the nation, in hopes of revitalizing the economy, mending the nation's poor diplomatic relations, and creating a more democratic and egalitarian state."
