--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -714,3 +714,11 @@
  HOL_benelux_unified_democratic_ADJ:0 "Benelux"
  FJN_subject:0 "$OVERLORDADJ$ Fijnland"
  FJN_subject_DEF:0 "$OVERLORDADJ$ Fijnland"
+ GEQ_REOM_neutrality:0 "Empire of Mu"
+ GEQ_REOM_neutrality_DEF:0 "The Empire of Mu"
+ GEQ_REOM_fascism:0 "Empire of Mu"
+ GEQ_REOM_fascism_DEF:0 "The Empire of Mu"
+ GEQ_REOM_democratic:0 "Republic of Mu"
+ GEQ_REOM_democratic_DEF:0 "The Republic of Mu"
+ GEQ_REOM_communism:0 "Mu Commune"
+ GEQ_REOM_communism_DEF:0 "The Mu Commune"
