--- a/localisation/events_l_english.yml
+++ b/localisation/events_l_english.yml
@@ -3193,6 +3193,52 @@
  geq.3.t:0 "Vashparaq accepts our demands"
  geq.3.d:0 "The states of Vashparaq has accepted our demands, and they have helped us unify our region and reconquer our continent!"
  geq.3.a:0 "Great!"
+ geq.4.t:0 "New Caledonia Under Attack!"
+ geq.4.d:0 "A foreign nation is attacking New Caledonia, they are a Commonwealth nation and thus have cultural and economic ties, should we invite them to our faction?"
+ geq.4.a:0 "We must defend the Commonwealth"
+ geq.4.b:0 "Better not risk a war across the world"
+ geq.5.t:0 "New Livonia Under Attack!"
+ geq.5.d:0 "A foreign nation is attacking New Livonia, they are a Commonwealth nation and thus have cultural and economic ties, should we invite them to our faction?"
+ geq.5.a:0 "We must defend the Commonwealth"
+ geq.5.b:0 "Better not risk a war across the world"
+ geq.6.t:0 "New Hibernia Under Attack!"
+ geq.6.d:0 "A foreign nation is attacking New Hibernia, they are a Commonwealth nation and thus have cultural and economic ties, should we invite them to our faction?"
+ geq.6.a:0 "We must defend the Commonwealth"
+ geq.6.b:0 "Better not risk a war across the world"
+ geq.7.t:0 "The Empire of Mu demands our lands"
+ geq.7.d:0 "The Empire of Mu demands the Manka peninsula."
+ geq.7.a:0 "We will not allow them any more expansion"
+ geq.7.b:0 "We must not risk a war"
+ geq.8.t:0 "Awarurua denies our demands"
+ geq.8.d:0 "Awarurua has denied our demand of the Manka peninsula, even though there is a minority of Murors being mistreated by their government."
+ geq.8.a:0 "To War!"
+ geq.9.t:0 "Awarurua accepts our demands"
+ geq.9.d:0 "The dirty Awaruruans have accepted our demands, even though they are Kanagan we will not deal with them any more as they have spared Muror blood."
+ geq.9.a:0 "Great!"
+ geq.10.t:0 "The Empire of Mu demands our colony"
+ geq.10.d:0 "The Empire of Mu demands our King's Thumb port city."
+ geq.10.a:0 "We shall not give up an inch of British soil"
+ geq.10.b:0 "Better not start a war across the world over a colony"
+ geq.11.t:0 "Britain denies our demands"
+ geq.11.d:0 "We must reclaim our continent, and for people who steal our land from across the world they deserve what they have coming."
+ geq.11.a:0 "To War!"
+ geq.12.t:0 "Britain accepts our demands"
+ geq.12.d:0 "Luckily, Britain has realized the unjustness of their colonization."
+ geq.12.a:0 "Great!"
+ geq.13.t:0 "The Empire of Mu demands our colony"
+ geq.13.d:0 "The Empire of Mu demands our port city 'Port Laurel'."
+ geq.13.a:0 "America will defend freedom across the world"
+ geq.13.b:0 "Self governence is for the best"
+ geq.14.t:0 "America denies our demands"
+ geq.14.d:0 "We must reclaim our continent, and for people who steal our land from across the world they deserve what they have coming."
+ geq.14.a:0 "To War!"
+ geq.15.t:0 "America accepts our demands"
+ geq.15.d:0 "Luckily, Americ has realized the unjustness of their colonization."
+ geq.15.a:0 "Great!"
+ geq.16.t:0 "Wrightsylvania Under Attack!"
+ geq.16.d:0 "A foreign nation is attacking Wrightsylvania, they are a Commonwealth nation and thus have cultural and economic ties, should we invite them to our faction?"
+ geq.16.a:0 "We must defend the Commonwealth"
+ geq.16.b:0 "Better not risk a war across the world"
 
  fsm.1.t:0 "Liberale Koalition Wins Elections"
  fsm.1.d:0 "The 1936 election in the FSM have concluded with a suprising victory at the hands of the Liberale Koalition. A progressive group, the LK party has only gained traction within recent years, but it seems to have been enough to garner them a slim majority of the votes. The party is already promising to undertake major reforms of the nation, in hopes of revitalizing the economy, mending the nation's poor diplomatic relations, and creating a more democratic and egalitarian state."
