--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -2517,6 +2517,16 @@
  GEQ_support_muror_unification_groups_across_mu_desc:0 "Former Geq, the Empire of Mu is influencing our politics, by supporting political parties that would wish to unify with them, and support of a monarchy."
  GEQ_invest_in_recruitment_tactics:0 "Invest in Recruiting Tactics"
  GEQ_invest_in_recruitment_tactics_desc:0 "We are investing in recruiting new soldiers, that are envigorated to fight for nation!"
+ GEQ_invest_in_espionage:0 "Invest in Espionage"
+ GEQ_invest_in_espionage_desc:0 "We are investing in espionage."
+ GEQ_communist_influences:0 "Communist Influences"
+ GEQ_communist_influences_desc:0 "Someone is supporting communist parties in our nation."
+ GEQ_ifyourreadingthisyourepic:0 "Under British Protection"
+ GEQ_ifyourreadingthisyourepic_desc:0 "If any nation attacks us Britain will have an option to invite us to the Allies."
+ GEQ_newly_formed_state:0 "Newly Formed State"
+ GEQ_newly_formed_state_desc:0 "We are a newly formed state, and we need to address our internal issues before looking outward."
+ GEQ_prepare_to_retake_the_southe:0 "Prepare to Retake The South"
+ GEQ_prepare_to_retake_the_southe_desc:0 "We must ready our armies for an invasion of our southern lands!"
 
 FSM_unfair_sufferage:0 "Unfair Suffrage"
 FSM_associate_state:0 "The Associate State"
