file names changed

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -852,7 +852,7 @@
  STATE_851:0 "Hannahland"
  STATE_852:0 "Friendsville"
  STATE_853:0 "Walen"
- STATE_854:0 "Scheonesland"
+ STATE_854:0 "Schoenesland"
  STATE_855:0 "Sofiashaven"
  STATE_856:0 "Navganara"
  STATE_857:0 "Navdrmu"
@@ -907,7 +907,7 @@
  STATE_906:0 "Savoiette"
  STATE_907:0 "Goprug"
  STATE_908:0 "Tlaqua"
- STATE_909:0 "Uicactel"
+ STATE_909:0 "Uiqaqtel"
  STATE_910:0 "Canaje"
  STATE_911:0 "Nocal"
  STATE_912:0 "Williamskust"
