Victory Points and Minor Name Changes

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -892,7 +892,7 @@
  STATE_891:0 "Manka"
  STATE_892:0 "Awa"
  STATE_893:0 "Kaniwha"
- STATE_894:0 "Imiz"
+ STATE_894:0 "Vaitafe Matagofie"
  STATE_895:0 "Hou'avae"
  STATE_896:0 "Pugepa"
  STATE_897:0 "Arero"
