victory points update

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -837,7 +837,7 @@
  STATE_836:0 "Houkehaka"
  STATE_837:0 "Houla'ana"
  STATE_838:0 "Vashparaq"
- STATE_839:0 "Lezam"
+ STATE_839:0 "Mauga Maumaututu"
  STATE_840:0 "U'e"
  STATE_841:0 "'Ae"
  STATE_842:0 "Lauwili"
@@ -921,7 +921,7 @@
  STATE_920:0 "Zuid-Pomoe"
  STATE_921:0 "Noord-Pomoe"
  STATE_922:0 "Geestbaistad"
- STATE_923:0 "Jillil"
+ STATE_923:0 "Jijil"
  STATE_924:0 "Jacaú"
  STATE_925:0 "Tiquea"
  STATE_926:0 "Javas"
