--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -936,18 +936,43 @@
  VICTORY_POINTS_13049:0 "Pitkairn"
  VICTORY_POINTS_8787:0 "Blaueswasser"
  VICTORY_POINTS_13837:0 "Vatpagchi Saeli"
-  VICTORY_POINTS_13905:0 "PLACEHOLDER NAME"
-  VICTORY_POINTS_13907:0 "Awa"
-   VICTORY_POINTS_13515:0 "Oi'oi"
-    VICTORY_POINTS_13412:0 "Whenuaomaui"
-     VICTORY_POINTS_13284:0 "Savaiki"
-      VICTORY_POINTS_13282:0 "Port Dewey"
-       VICTORY_POINTS_13899:0 "Port Laurel"
-        VICTORY_POINTS_13898:0 "King's Thumb"
-         VICTORY_POINTS_13766:0 "Q'tir"
-          VICTORY_POINTS_13756:0 "Qna'a"
-           VICTORY_POINTS_13868:0 "Labn"
-            VICTORY_POINTS_13822:0 "Asetale"
-             VICTORY_POINTS_13821:0 "Virqq"
-              VICTORY_POINTS_13808:0 "Neji"
-               VICTORY_POINTS_13622:0 "Navganara"
+ VICTORY_POINTS_13905:0 "Nofoaga Agava'a"
+ VICTORY_POINTS_13907:0 "Va'ava'ai Mata"
+ VICTORY_POINTS_13515:0 "Moli Feagai"
+ VICTORY_POINTS_13412:0 "Whenuaomaui"
+ VICTORY_POINTS_13284:0 "Savaiki"
+ VICTORY_POINTS_13282:0 "Port Dewey"
+ VICTORY_POINTS_13899:0 "Port Laurel"
+ VICTORY_POINTS_13898:0 "King's Thumb"
+ VICTORY_POINTS_13766:0 "Q'tir"
+ VICTORY_POINTS_13756:0 "Qna'a"
+ VICTORY_POINTS_13868:0 "Labn"
+ VICTORY_POINTS_13822:0 "Asetale"
+ VICTORY_POINTS_13821:0 "Virqq"
+ VICTORY_POINTS_13808:0 "Neji"
+ VICTORY_POINTS_13622:0 "Navganara"
+ VICTORY_POINTS_13428:0 "Mauga O Molimau"
+ VICTORY_POINTS_13476:0 "Aai O Le Togavao"
+ VICTORY_POINTS_14019:0 "Sable Blanc"
+ VICTORY_POINTS_14027:0 "Nouvelle-Chambéry"
+ VICTORY_POINTS_13744:0 "Waponi Woo"
+ VICTORY_POINTS_13284:0 "Fugalaau Mumu"
+ VICTORY_POINTS_14076:0 "Groene Velden"
+ VICTORY_POINTS_14051:0 "San Leandro"
+ VICTORY_POINTS_14033:0 "Cruz de San Andrés"
+ VICTORY_POINTS_14054:0 "Jallivizen"
+ VICTORY_POINTS_14066:0 "Arquvon"
+ VICTORY_POINTS_14141:0 "Jijil"
+ VICTORY_POINTS_14146:0 "San Pedro"
+ VICTORY_POINTS_2405:0 "Arena de Oro"
+ VICTORY_POINTS_8664:0 "Edwardsberg"
+ VICTORY_POINTS_2552:0 "Gelbhaken"
+ VICTORY_POINTS_5474:0 "Karlsbaden"
+ VICTORY_POINTS_5659:0 "Reichhaltige"
+ VICTORY_POINTS_8327:0 "Silberne Straße"
+ VICTORY_POINTS_8769:0 "Schönestrand"
+ VICTORY_POINTS_3244:0 "Süßwasser"
+ VICTORY_POINTS_13979:0 "Liberación"
+ VICTORY_POINTS_13987:0 "Campo Santo"
+ VICTORY_POINTS_13998:0 "Tierra Peligrosa"
+ VICTORY_POINTS_13958:0 "Tuugamau O Lafu"
